# mohammedamer.github.io

./: .gitignore  Dockerfile  Gemfile  _config.yml  compose.jekyll.yml  compose.jupyter.yml  compose.yml  index.html  jekyll_down.sh  jekyll_restart.sh  jekyll_up.sh  library.md  main.py  marimo_up.sh  package-lock.json  package.json  publications.md  pyproject.toml  run.sh  screen.md
.github/workflows/: ci.yml
_includes/: nav.html  social-networks-links.html
_layouts/: base.html  page.html  post.html
_posts/: 2025-10-05-spring.md  2025-10-08-lr_schedule.md  2025-10-12-phiflow.md  2025-10-13-damped_osc.md  2025-10-26-cart_pole.md  2025-11-24-nbody.md  2025-11-28-2d_wave.md  2025-11-6-double_pend.md  2025-11-7-double_pend.md  2025-12-01-inverted_prism.md
assets/css/: beautifuljekyll.css
authoring/: spring.py
authoring/2d_wave/: main.ipynb
authoring/cart_pole/: main.ipynb
authoring/damped_osc/: main.ipynb
authoring/double_pend/: main.ipynb
authoring/inverted_prism/: main.ipynb
authoring/lr_schedule/: main.ipynb
authoring/nbody/: main.ipynb
authoring/phiflow/: main.ipynb
authoring/spherical/: main.ipynb
authoring/spring/: main.ipynb  main.py  spring.py
authoring_julia/double_pend/: notebook.jl
config/_default/: hugo.yaml  menus.yaml  params.yaml
content/: _index.md  publications.md
content/authors/admin/: _index.md
content/post/blog-with-jupyter/: index.md
tools/: export_md.py
