[project]
name = "mohammedamer-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celluloid>=0.2.0",
    "h5py>=3.14.0",
    "jax>=0.7.2",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "marimo>=0.15.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "phiflow>=3.4.0",
    "scipy>=1.16.2",
    "simple-pid>=2.0.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
